--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -5,5 +5,6 @@
   <li (click)="selectedProduct = 'Wireless Keyboard'">Wireless Keyboard</li>
 </ul>
 <app-product-detail
-  [name] = "selectedProduct">
+  [name] = "selectedProduct" (bought)="onBuy()">
 </app-product-detail>
+
