add pipe for Product type

--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -2,11 +2,11 @@
 <ul>
   <li *ngFor="let product of products"
   (click)="selectedProduct = product">
-  {{ product }}
+  {{ product.name }}
 </ul>
 <app-product-detail
   *ngIf="selectedProduct; else noProduct"
-  [name] = "selectedProduct"
+  [product] = "selectedProduct"
   (bought)="onBuy()">
 </app-product-detail>
 <ng-template #noProduct>
