--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,5 +1,6 @@
-<div *ngIf="name">
+<div *ngIf="product">
   <h2>Product Details</h2>
-  <h3>{{name}}</h3>
+  <h3>{{product.name | uppercase}}</h3>
+  <h3>{{product.price | currency}}</h3>
   <button (click)="buy()">Buy Now</button>
 </div>
