--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -13,5 +13,5 @@
   <p>No Product Selected</p>
 </ng-template>
 
-<h3>Offers</h3>
-<ng-template appProductHost></ng-template>
+<h3>Favorites</h3>
+<app-favorites></app-favorites>
